tests/structurals/ill-typed/nat.stella
language core;
extend with #structural-patterns;

fn main(input : Nat) -> Bool {
  return
    match input {
      0 => true
   }
}
